--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -289,7 +289,7 @@
 	"dashboard.home-page.new-skill-firstPart": "Вы достигли следующего уровня фриланса",
 	"dashboard.home-page.new-skill-lastPart ": ", это открывает вам дополнительные возможности пользоваться сервисом Profiroom!",
 	"dashboard.home-page.order-quantity": "Кол-во заказов",
-	"dashboard.home-page.projects-in-process": "Проектов в работе:",
+	"dashboard.home-page.projects-in-process": "проектов в работе:",
 	"dashboard.home-page.projects-in-queue": "Проектов в очереди: ",
 	"dashboard.home-page.ranks.subtitle": "Уровень моего професионализма и тарифный план",
 	"dashboard.home-page.ranks.title": "Мои достижения",
@@ -487,8 +487,8 @@
 	"home-page.how-work-subtitle": "работай с уверенностью",
 	"home-page.how-work-text": "Выберите категорию услуг вашего проекта. Затем определитесь с фрилансером исходя из портфолио, отзывов, рейтинга.",
 	"home-page.how-work-text2": "Эти 4 простых правила помогут вам найти лучшего для себя исполнителя",
-  "home-page.how-work-text3": "Специалисту выгодно презентовать свои услуги на бирже, получая новые заказы от клиентов. Онлайн платформа позволяет работать вам с любого места без будильников, начальников и понедельников.",
-  "home-page.how-work-text4": "Для успешной работы на бирже фриланса, создайте продающий профиль, заполните портфолио и получайте хорошие отзывы за удачно выполненные проекты. Чем больше проектов вы сдаете - тем выше шансы, что новые заказчики закажут именно ваши услуги. Вот 4 простых правила успешной работы для фрилансера",
+	"home-page.how-work-text3": "Специалисту выгодно презентовать свои услуги на бирже, получая новые заказы от клиентов. Онлайн платформа позволяет работать вам с любого места без будильников, начальников и понедельников.",
+	"home-page.how-work-text4": "Для успешной работы на бирже фриланса, создайте продающий профиль, заполните портфолио и получайте хорошие отзывы за удачно выполненные проекты. Чем больше проектов вы сдаете - тем выше шансы, что новые заказчики закажут именно ваши услуги. Вот 4 простых правила успешной работы для фрилансера",
 	"home-page.how-work-title": "Как это работает?",
 	"home-page.search-subtitle": "Profiroom для бизнеса - биржа фриланса",
 	"home-page.search-title": "Наймите фрилансера быстро из любой точки по оптимальной для вас цене",
@@ -627,9 +627,9 @@
 	"user-page.unknown-completion\n": "не указано",
 	"user-page.user-busy": "загружен",
 	"user-page.user-free": "свободен",
-	"user-pie-chart.compleatedDeals": "Завершеные",
-	"user-pie-chart.falledDeals": "Проваленные",
-	"user-pie-chart.inProgress": "В процессе",
+	"user-pie-chart.compleatedDeals": "Завершенные проекты",
+	"user-pie-chart.falledDeals": "Проекты не сданы",
+	"user-pie-chart.inProgress": "Проектов в работе",
 	"user-settings.about-user": "О себе",
 	"user-settings.academic-degree": "Учёная степень",
 	"user-settings.add-education": "Добавить образование",
