--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -289,7 +289,7 @@
 	"dashboard.home-page.new-skill-firstPart": "Ви досягли наступного рівня фрілансу",
 	"dashboard.home-page.new-skill-lastPart ": ", це відкриває вам додаткові можливості користуватися сервісом Profiroom!",
 	"dashboard.home-page.order-quantity": "К-сть замовлень",
-	"dashboard.home-page.projects-in-process": "Проектів в роботі:",
+	"dashboard.home-page.projects-in-process": "проектів в роботі:",
 	"dashboard.home-page.projects-in-queue": "Проектів в черзі:",
 	"dashboard.home-page.ranks.subtitle": "Мій рівень професійності і тарифний план",
 	"dashboard.home-page.ranks.title": "Мої досягнення",
@@ -487,8 +487,8 @@
 	"home-page.how-work-subtitle": "працюй з упевненістю",
 	"home-page.how-work-text": "Виберіть категорію послуг вашого проекту. Потім визначтеся з фрілансером виходячи з портфоліо, відгуків, рейтингу.",
 	"home-page.how-work-text2": "Ці 4 простих правила допоможуть вам знайти кращого для себе виконавця",
-  "home-page.how-work-text3": "Фахівцю вигідно презентувати свої послуги на біржі, отримуючи нові замовлення від клієнтів. Онлайн платформа дозволяє працювати вам з будь-якого місця без будильників, начальників і понеділків.",
-  "home-page.how-work-text4": "Для успішної роботи на біржі фрілансу, створіть продає профіль, заповніть портфоліо і отримуйте хороші відгуки за вдало виконані проекти. Чим більше проектів ви здаєте - тим вищі шанси, що нові замовники замовлять саме ваші послуги. Ось 4 простих правила успішної роботи для фрілансера",
+	"home-page.how-work-text3": "Фахівцю вигідно презентувати свої послуги на біржі, отримуючи нові замовлення від клієнтів. Онлайн платформа дозволяє працювати вам з будь-якого місця без будильників, начальників і понеділків.",
+	"home-page.how-work-text4": "Для успішної роботи на біржі фрілансу, створіть продає профіль, заповніть портфоліо і отримуйте хороші відгуки за вдало виконані проекти. Чим більше проектів ви здаєте - тим вищі шанси, що нові замовники замовлять саме ваші послуги. Ось 4 простих правила успішної роботи для фрілансера",
 	"home-page.how-work-title": "Як це працює?",
 	"home-page.search-subtitle": "Profiroom для бізнесу - біржа фріланса",
 	"home-page.search-title": "Найміть фрілансера швидко з будь-якої точки по оптимальній для вас ціні",
@@ -627,9 +627,9 @@
 	"user-page.unknown-completion\n": "",
 	"user-page.user-busy": "завантажений",
 	"user-page.user-free": "вільний",
-	"user-pie-chart.compleatedDeals": "Завершени",
-	"user-pie-chart.falledDeals": "Провалени",
-	"user-pie-chart.inProgress": "В процесси",
+	"user-pie-chart.compleatedDeals": "Реалізовані проекти",
+	"user-pie-chart.falledDeals": "Проекти не здані",
+	"user-pie-chart.inProgress": "Проектів в роботі",
 	"user-settings.about-user": "Про себе",
 	"user-settings.academic-degree": "Наукова ступінь",
 	"user-settings.add-education": "Додати освіту",
