--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -59,8 +59,11 @@
 	"bell-notifications.DealFinished": "Робота оплачена",
 	"bell-notifications.DealFinishedByFreelancer": "Робота завершина фрілансером",
 	"bell-notifications.approveBrief": "Бриф підтверджений",
+	"bell-notifications.arbitration": "Звернення до арбітражу",
 	"bell-notifications.clear-all": "Очистити все",
 	"bell-notifications.holdMoney": "Засоби зарезірвіровани",
+	"bell-notifications.moneyGivenToCustomer": "Гроші переведені на рахунок замовника",
+	"bell-notifications.moneyGivenToFreelancer": "Гроші переведені на рахунок фрілансера",
 	"bell-notifications.no-messages": "Повідомлень немає",
 	"bell-notifications.refuseBrief": "Відмова від брифа",
 	"bell-notifications.sentBrief": "Прийшов бриф",
