--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -59,8 +59,11 @@
 	"bell-notifications.DealFinished": "Работа оплачена",
 	"bell-notifications.DealFinishedByFreelancer": "Работа завершина фрилансером",
 	"bell-notifications.approveBrief": "Бриф подтвержден",
+	"bell-notifications.arbitration": "Обращение в арбитраж",
 	"bell-notifications.clear-all": "Очистить все",
 	"bell-notifications.holdMoney": "Средства зарезирвированы",
+	"bell-notifications.moneyGivenToCustomer": "Деньги переведены на счет заказчика",
+	"bell-notifications.moneyGivenToFreelancer": "Деньги переведены на счет фрилансера",
 	"bell-notifications.no-messages": "Уведомлений нет",
 	"bell-notifications.refuseBrief": "Отказ от брифа",
 	"bell-notifications.sentBrief": "Пришел бриф",
