--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -185,9 +185,10 @@
 	"dashboard.cards-on-top.customers-quantity": "к-сть всіх замовників",
 	"dashboard.cards-on-top.freezed-money": "заморожені кошти",
 	"dashboard.cards-on-top.output-cesh": "виведені кошти",
+	"dashboard.cash-box.card-number-placeholder": "Введіть номер картки",
 	"dashboard.cash-box.choose-operation-type": "Виберіть операцію",
 	"dashboard.cash-box.input-money": " Ввести гроші",
-	"dashboard.cash-box.output-money": " Ввести гроші",
+	"dashboard.cash-box.output-money": "Вивести гроші",
 	"dashboard.cash-box.send-money": "Внести гроші",
 	"dashboard.cash-box.summ": "Сума",
 	"dashboard.cash-box.ur-password": "Ваш пароль",
